# laplace

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CODEX_LAPLACE_A6000_PYTHON_SYSTEMVERILOG_PROMPT.md  CODEX_PROMPT.md  PROJECT_CONFIG.yaml  PROMPTS.md  README.md  README_CODEX_A6000_PYTHON_SYSTEMVERILOG.md  pyproject.toml
codex_a6000/: AGENT_RULES.md  PROJECT_CONFIG.json
configs/: local.yaml
docs/: ARCHITECTURE.md  BENCHMARK_REPORT.md  FORMALSCIENCE_OPERATING_GUIDE.md  IEEE_XPLORE_WORKFLOW.md  IMPLEMENTATION_PLAN.md  INSTALL_LINUX_WSL.md  INSTALL_WINDOWS.md  LIMITATIONS.md  NPU_STATUS.md  ONLINE_RESEARCH_SECURITY.md  PROJECT_LIFECYCLE.md  PROVENANCE_MODEL.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
prompts/: drafting.txt  engineering_analysis.txt  retrieval_answer.txt  scientific_extraction.txt
schemas/: evidence_packet.schema.json  scientific_record.schema.json
scripts/: acquire_multilanguage_governed_references.py  backup.ps1  bootstrap.ps1  bootstrap.sh  bootstrap_multilanguage_tools.sh  bootstrap_vllm_cu129.sh  install_laplace.ps1  manage_multilanguage_model_servers.sh  manage_multilanguage_models.py  quantize_multilanguage_model.py  register_shared_reference.py  run_checks.ps1  run_multilanguage_dual_model_ablation.sh  run_phase2_phase3_serial.sh  start.ps1  stop.ps1  uninstall_laplace.ps1
templates/: project.yaml
tests/: test_chat.py  test_dual_model_ablation.py  test_engineering.py  test_laplace.py  test_llm_response_channels.py  test_paired_benchmark.py  test_quality_targeted.py  test_rtl_worker_routing_patch.py  test_workspace.py  (+1 more)
(+179 files in other folders)
