[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-research-workspace"
version = "0.1.0"
description = "Private localhost-only research retrieval and analysis workspace"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "pydantic>=2.7", "pypdf>=5.0", "fastapi>=0.115", "uvicorn>=0.30", "python-multipart>=0.0.9"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6", "bandit>=1.7", "httpx>=0.27", "ruff>=0.8", "mypy>=1.13", "types-PyYAML>=6.0"]
docx = ["python-docx>=1.1"]
docling = ["docling>=2.0"]
browser = ["playwright>=1.40"]

[project.scripts]
research-workspace = "research_workspace.cli:main"
laplace = "research_workspace.laplace_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["benchmarks/a6000_agent_team/paired_public"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["research_workspace"]

[tool.coverage.run]
branch = true
source = ["research_workspace"]

[tool.coverage.report]
show_missing = true
